Added social auth (gmail), works as well
modified:   blog/__pycache__/settings.cpython-37.pyc
modified:   blog/settings.py
new file:   index/templates/detail.html
modified:   index/templates/index.html
modified:   templates/account/login.html
modified:   templates/account/signup.html
modified:   templates/base.html

--- a/index/templates/detail.html
+++ b/index/templates/detail.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div class="container my-5 py-5 bg-light">
   <div class="row mb-5">
     <div class="col-md-12">
       <div class="card">
@@ -81,5 +82,6 @@
   {{ category }}
   {% endfor %}
 
+</div>
 
 {% endblock %}
