--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -42,7 +42,9 @@
     <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
     {% endif %}
     <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-    <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
+    <button class="primaryAction btn btn-primary" type="submit">{% trans "Sign In" %}</button>
+    <hr>
+    <a class="primaryAction btn btn-danger" href="{% provider_login_url 'google' %}" style="width:100%;">Log In with Gmail</a>
   </form>
 </div>
 
