--- a/templates/base.html
+++ b/templates/base.html
@@ -12,16 +12,6 @@
 <div class="container">
   {% block body %}
 
-  {% if messages %}
-  <div>
-    <strong>Messages:</strong>
-    <ul>
-      {% for message in messages %}
-      <li>{{message}}</li>
-      {% endfor %}
-    </ul>
-  </div>
-  {% endif %}
 </div>
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -63,6 +53,16 @@
 
 <main>
   <div class="container py-5">
+    {% if messages %}
+    <div class="container">
+      <strong>Messages:</strong>
+      <ul>
+        {% for message in messages %}
+        <li>{{message}}</li>
+        {% endfor %}
+      </ul>
+    </div>
+    {% endif %}
     {% block content %}
     {% endblock %}
     {% endblock %}
