Added Create View
new file:   index/__pycache__/forms.cpython-37.pyc
modified:   index/__pycache__/urls.cpython-37.pyc
modified:   index/__pycache__/views.cpython-37.pyc
new file:   index/forms.py
new file:   index/templates/create.html
modified:   index/templates/detail.html
modified:   index/templates/index.html
modified:   index/urls.py
modified:   index/views.py

--- a/index/templates/detail.html
+++ b/index/templates/detail.html
@@ -4,6 +4,6 @@
 
 ID: {{ post.id }} <br>
 Title: {{ post.title }} <br>
-Content: {{ post.content }}
+Content: {{ post.content|safe }}
 
 {% endblock %}
