--- a/index/templates/index.html
+++ b/index/templates/index.html
@@ -1,85 +1,91 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <div class="row mb-5">
-    <div class="col-md-12">
-      <div class="card">
-        <h5 class="card-header">Postgres Posts</h5>
-        <div class="card-body">
-          <div class="row">
-            {% for post in posts %}
-            <div class="col-md-6">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">{{ post }}</h5>
-                  <p class="card-text">{{ post.content|safe }}</p>
-                  <a href="{{ post.get_absolute_url }}" class="btn btn-primary">Read More</a>
-                </div>
+<a href="{% url 'create' %}" class="btn btn-primary mb-2">Create Post</a>
+<div class="row mb-5">
+  <div class="col-md-12">
+    <div class="card">
+      <h5 class="card-header">Postgres Posts</h5>
+      <div class="card-body">
+        <div class="row">
+          {% for post in posts %}
+          <div class="col-md-6">
+            <div class="card mb-2">
+              <div class="card-body">
+                <h5 class="card-title">{{ post }}</h5>
+                <p class="card-text">{{ post.content|safe }}</p>
+                <a href="{{ post.get_absolute_url }}" class="btn btn-primary">Read More</a>
               </div>
             </div>
-            {% endfor %}
           </div>
-
+          {% endfor %}
         </div>
+
       </div>
     </div>
   </div>
+</div>
 
-  <hr>
+<hr>
 
-  <div class="row mt-5">
-    <div class="col-md-12">
-      <div class="card">
-        <h5 class="card-header">MySQL Posts</h5>
-        <div class="card-body">
-          <div class="row">
-            {% for post in posts_mysql %}
-            <div class="col-md-6">
-              <div class="card">
-                <div class="card-body">
-                  <p class="card-text">{{ post.id }}</p>
-                  <p class="card-text">{{ post.image_url }}</p>
-                  <a href="#" class="btn btn-primary">Read More</a>
-                </div>
+<div class="row mt-5">
+  <div class="col-md-12">
+    <div class="card">
+      <h5 class="card-header">MySQL Posts</h5>
+      <div class="card-body">
+        <div class="row">
+          {% for post in posts_mysql %}
+          <div class="col-md-6">
+            <div class="card">
+              <div class="card-body">
+                <p class="card-text">{{ post.id }}</p>
+                <p class="card-text">{{ post.image_url }}</p>
+                <a href="#" class="btn btn-primary">Read More</a>
               </div>
             </div>
-            {% endfor %}
           </div>
-
+          {% endfor %}
         </div>
+
       </div>
     </div>
   </div>
+</div>
 
-  <hr>
+<hr>
 
-  <div class="row mt-5">
-    <div class="col-md-12">
-      <div class="card">
-        <h5 class="card-header">MySQL Products</h5>
-        <div class="card-body">
-          <div class="row">
-            {% for post in product_mysql %}
-            <div class="col-md-6">
-              <div class="card">
-                <div class="card-body">
-                  <p class="card-text"><b>ID: </b>{{ post.id }}</p>
-                  <p class="card-text">{{ post }}</p>
-                  <a href="#" class="btn btn-primary">Read More</a>
-                </div>
+<div class="row mt-5">
+  <div class="col-md-12">
+    <div class="card">
+      <h5 class="card-header">MySQL Products</h5>
+      <div class="card-body">
+        <div class="row">
+          {% for post in product_mysql %}
+          <div class="col-md-6">
+            <div class="card">
+              <div class="card-body">
+                <p class="card-text"><b>ID: </b>{{ post.id }}</p>
+                <p class="card-text">{{ post }}</p>
+                <a href="#" class="btn btn-primary">Read More</a>
               </div>
             </div>
-            {% endfor %}
           </div>
-
+          {% endfor %}
         </div>
+
       </div>
     </div>
   </div>
+</div>
 
-  {% for category in product_category_mysql %}
-  {{ category }}
-  {% endfor %}
+{% for category in product_category_mysql %}
+{{ category }}
+{% endfor %}
 
+<style>
+  img {
+    width: 100% !important;
+  }
+</style>
 
 {% endblock %}
