Add UpdateView and DeleteView
modified:   blog/__pycache__/settings.cpython-37.pyc
modified:   blog/settings.py
modified:   index/__pycache__/urls.cpython-37.pyc
modified:   index/__pycache__/views.cpython-37.pyc
renamed:    index/templates/create.html -> index/templates/create-update.html
new file:   index/templates/delete.html
modified:   index/templates/detail.html
modified:   index/templates/index.html
modified:   index/urls.py
modified:   index/views.py
modified:   templates/account/email_confirm.html
modified:   templates/base.html

--- a/index/templates/detail.html
+++ b/index/templates/detail.html
@@ -2,8 +2,14 @@
 
 {% block content %}
 
-ID: {{ post.id }} <br>
-Title: {{ post.title }} <br>
-Content: {{ post.content|safe }}
+<div class="mb-4">
+  <a href="{% url 'update' pk=post.id %}" class="btn btn-info">Edit</a>
+  <a href="{% url 'delete' pk=post.id %}" class="btn btn-danger">Delete</a>
+</div>
+<div>
+  ID: {{ post.id }} <br>
+  Title: {{ post.title }} <br>
+  Content: {{ post.content|safe }}
+</div>
 
 {% endblock %}
