--- a/index/templates/create-update.html
+++ b/index/templates/create-update.html
@@ -6,7 +6,7 @@
 
 <div class="card">
   <div class="card-header">
-    Create Post
+    {{ card_header }}
   </div>
   <form method="post">{% csrf_token %}
     <div class="card-body">
@@ -14,6 +14,11 @@
     </div>
     <div class="card-footer text-muted">
       <button class="btn btn-primary">Submit</button>
+      {% if update %}
+        <a href="{{ post.get_absolute_url }}" class="btn btn-secondary">Cancel</a>
+      {% else %}
+        <a href="{% url 'index' %}" class="btn btn-secondary">Cancel</a>
+      {% endif %}
     </div>
   </form>
 </div>
