Added user passes and author to each post
modified:   index/__pycache__/admin.cpython-37.pyc
modified:   index/__pycache__/models.cpython-37.pyc
modified:   index/__pycache__/views.cpython-37.pyc
modified:   index/admin.py
new file:   index/migrations/0002_post_author.py
new file:   index/migrations/__pycache__/0002_post_author.cpython-37.pyc
modified:   index/models.py
modified:   index/templates/detail.html
modified:   index/views.py

--- a/index/templates/detail.html
+++ b/index/templates/detail.html
@@ -2,10 +2,13 @@
 
 {% block content %}
 
+{% if post.author == user %}
 <div class="mb-4">
   <a href="{% url 'update' pk=post.id %}" class="btn btn-info">Edit</a>
   <a href="{% url 'delete' pk=post.id %}" class="btn btn-danger">Delete</a>
 </div>
+{% endif %}
+
 <div>
   ID: {{ post.id }} <br>
   Title: {{ post.title }} <br>
