--- a/templates/base.html
+++ b/templates/base.html
@@ -33,6 +33,7 @@
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="#">Profile</a>
+              <a class="dropdown-item" href="{% url 'account_change_password' %}">Change Password</a>
               <a class="dropdown-item" href="{% url 'account_email' %}">Change E-mail</a>
               <a class="dropdown-item" href="{% url 'account_logout' %}">Sign Out</a>
             </div>
