--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -13,7 +13,23 @@
 
   <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
     {% csrf_token %}
-    {{ form|crispy }}
+    <div class="form-row">
+      <div class="form-group col-md-6">
+        {{ form.hris_id|as_crispy_field }}
+      </div>
+      <div class="form-group col-md-6 ">
+        {{ form.email|as_crispy_field }}
+      </div>
+    </div>
+    <div class="form-group">
+      {{ form.username|as_crispy_field }}
+    </div>
+    <div class="form-group">
+      {{ form.password1|as_crispy_field }}
+    </div>
+    <div class="form-group">
+      {{ form.password2|as_crispy_field }}
+    </div>
     {% if redirect_field_value %}
     <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
     {% endif %}
